# r2

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/r2/: Cargo.toml  README.md
crates/r2/src/: main.rs
crates/r2utils/: Cargo.toml
crates/rmw/: README.md
demos/: Cargo.toml  README.md
docs/: book.toml  ros2-arch.md
docs/src/: SUMMARY.md  simulators.md
documentation/: Cargo.toml
r2idl/: Cargo.toml
r2idl/src/: defination.rs  lib.rs  msg.pest  msg_parser.rs  msg_type.rs
r2utils/: Cargo.toml
r2utils/src/: time.rs
rcl/: Cargo.toml
rcl/src/: arguments.rs  client.rs  context.rs  domain_id.rs  event.rs  graph.rs  guard_condition.rs  init_options.rs  lexer.rs  lexer_lookahead.rs  lib.rs  localhost.rs  network_flow_endpoints.rs  node.rs  node_options.rs  publisher.rs  remap.rs  rmw_implementation_identifier_check.rs  security.rs  service.rs  subscription.rs  time.rs  timer.rs  types.rs  validate_enclave_name.rs  validate_topic_name.rs  wait.rs
rcl_action/: Cargo.toml
rcl_action/src/: action_client.rs  action_server.rs  default_qos.rs  goal_handle.rs  lib.rs  types.rs
rcl_lifecycle/: Cargo.toml
rcl_lifecycle/src/: data_types.rs  default_state_machine.rs  lib.rs
rmw/: Cargo.toml
rmw/src/: domain_id.rs  event.rs  init.rs  init_options.rs  lib.rs  localhost.rs  message_sequence.rs  names_and_types.rs  network_flow_endpoint.rs  network_flow_endpoint_array.rs  qos_policy_kind.rs  qos_profiles.rs  ret_types.rs  rmw.rs  security_options.rs  serialized_message.rs  time.rs  topic_endpoint_info.rs  types.rs  validator.rs  (+4 more)
tools/: pre-commit
(+44 files in other folders)
